// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
.c0 {
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
}

.c1 {
  border: 0;
  caret-color: #3023ae;
  color: #646468;
  font-family: Inconsolata;
  font-size: 16px;
  height: 100%;
  left: 0;
  outline: none;
  padding: 1rem;
  position: absolute;
  top: 0;
  resize: none;
  width: 100%;
  -webkit-overflow-scrolling: touch;
}

.c1:disabled {
  opacity: 0.2;
}

.c1::selection {
  background-color: #3023ae;
  color: #fff;
}

<div
  className="c0"
>
  <textarea
    className="c1"
    onChange={[MockFunction]}
    onClick={[Function]}
    onDrop={[Function]}
    onKeyUp={[Function]}
    placeholder="Write markdown here"
    value="Test"
  />
</div>
`;

exports[`renders correctly with disabled and isLoading 1`] = `
.c0 {
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
}

.c1 {
  border: 0;
  caret-color: #3023ae;
  color: #646468;
  font-family: Inconsolata;
  font-size: 16px;
  height: 100%;
  left: 0;
  outline: none;
  padding: 1rem;
  position: absolute;
  top: 0;
  resize: none;
  width: 100%;
  -webkit-overflow-scrolling: touch;
}

.c1:disabled {
  opacity: 0.2;
}

.c1::selection {
  background-color: #3023ae;
  color: #fff;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  padding: 2rem;
  position: absolute;
  top: 0;
  width: 100%;
}

.c2::after {
  background-image: linear-gradient( 90deg, #3023ae 0%, #3023ae 50%, #fff 50%, #fff 100% );
  border: 2px solid #3023ae;
  border-radius: 1rem;
  content: '';
  height: 1rem;
  display: block;
  width: 100%;
}

<div
  className="c0"
>
  <textarea
    className="c1"
    disabled={true}
    onChange={[MockFunction]}
    onClick={[Function]}
    onDrop={[Function]}
    onKeyUp={[Function]}
    placeholder="Write markdown here"
    value="Test"
  />
  <div
    className="c2"
  />
</div>
`;
